flight_ws/src/log/build_2024-07-10_10-37-18/opencv_tools/stdout_stderr.log
running egg_info
writing ../build/opencv_tools/opencv_tools.egg-info/PKG-INFO
writing dependency_links to ../build/opencv_tools/opencv_tools.egg-info/dependency_links.txt
writing entry points to ../build/opencv_tools/opencv_tools.egg-info/entry_points.txt
writing requirements to ../build/opencv_tools/opencv_tools.egg-info/requires.txt
writing top-level names to ../build/opencv_tools/opencv_tools.egg-info/top_level.txt
reading manifest file '../build/opencv_tools/opencv_tools.egg-info/SOURCES.txt'
writing manifest file '../build/opencv_tools/opencv_tools.egg-info/SOURCES.txt'
running build
running build_py
copying opencv_tools/basic_image_subscriber.py -> /home/chan/Documents/opencv_ws/src/build/opencv_tools/build/lib/opencv_tools
copying opencv_tools/basic_image_publisher.py -> /home/chan/Documents/opencv_ws/src/build/opencv_tools/build/lib/opencv_tools
copying opencv_tools/__init__.py -> /home/chan/Documents/opencv_ws/src/build/opencv_tools/build/lib/opencv_tools
running install
running install_lib
copying /home/chan/Documents/opencv_ws/src/build/opencv_tools/build/lib/opencv_tools/basic_image_subscriber.py -> /home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools
copying /home/chan/Documents/opencv_ws/src/build/opencv_tools/build/lib/opencv_tools/basic_image_publisher.py -> /home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools
byte-compiling /home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools/basic_image_subscriber.py to basic_image_subscriber.cpython-310.pyc
byte-compiling /home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools/basic_image_publisher.py to basic_image_publisher.cpython-310.pyc
  File "/home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools/basic_image_publisher.py", line 21
    if ret,frame == True:
          ^
SyntaxError: invalid syntax

running install_data
copying resource/opencv_tools -> /home/chan/Documents/opencv_ws/src/install/opencv_tools/share/ament_index/resource_index/packages
copying package.xml -> /home/chan/Documents/opencv_ws/src/install/opencv_tools/share/opencv_tools
running install_egg_info
removing '/home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/opencv_tools/opencv_tools.egg-info to /home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools-0.0.0-py3.10.egg-info
running install_scripts
Installing img_publisher script to /home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/opencv_tools
Installing img_subscriber script to /home/chan/Documents/opencv_ws/src/install/opencv_tools/lib/opencv_tools
writing list of installed files to '/home/chan/Documents/opencv_ws/src/build/opencv_tools/install.log'
